--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,8 @@
     "autoload": {
         "psr-0": { "": "src/", "SymfonyStandard": "app/" }
     },
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "require": {
         "php": ">=5.3.3",
         "symfony/symfony": "2.5.*",
